--- a/raw-html-css-js/navbars/responsiveNavbar/index.html
+++ b/raw-html-css-js/navbars/responsiveNavbar/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Navbar</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -33,5 +34,13 @@
             </ul>
         </nav>
     </header>
+
+    <script>
+        hamburger = document.querySelector(".hamburger");
+        hamburger.onclick = function(){
+            navBar = document.querySelector(".nav-bar")
+            navBar.classList.toggle("active");
+        }
+    </script>
 </body>
 </html>
